# simon

./: .gitignore  Cargo.toml  Readme.md  current.json
assets_source/sounds/: sounds.aup
assets_source/sounds/sounds_data/e08/d08/: e080801a.au  e080803c.au  e08080c0.au  e0808123.au  e0808138.au  e080818e.au  e08081db.au  e0808208.au  e0808228.au  e080823c.au  e08082b7.au  e08082ce.au  e08082dd.au  e0808307.au  e0808316.au  e080834d.au  e0808351.au  e0808352.au  e080839b.au  e08083bd.au  e08083ca.au  e08083da.au  e08083e5.au  e08083f8.au  e08083fc.au  e0808469.au  e080849a.au  e08084b7.au  e08084d7.au  e0808510.au  e080852f.au  e0808561.au  e080857d.au  e08085b4.au  e08085bd.au  e08085d0.au  (+73 more)
crates/fish_rythm/: Cargo.toml
crates/fish_rythm/src/: main.rs  react_timing_buttons.rs  spawn_timings.rs  timing_button.rs
crates/particles/: Cargo.toml
crates/particles/src/: lib.rs
crates/progress/: Cargo.toml
crates/progress/src/: lib.rs
crates/rust_arcade/: Cargo.toml
crates/rust_arcade/src/: bevy_rust_arcade.rs  fake_arcade.rs  lib.rs
crates/rust_arcade_display/: Cargo.toml
crates/rust_arcade_display/src/: lib.rs
crates/simon/: Cargo.toml
crates/simon/assets_source/: arrow.xcf  round_button.xcf
crates/simon/assets_source/sounds/sounds_data/e08/d08/: e08082bf.au  e080850c.au  e0808729.au  e08087f2.au  e0808978.au  e0808e6b.au  e0808f08.au  e0808f65.au
crates/simon/src/: main.rs  simon_progress.rs  simon_reset.rs
src/: arcade_display.rs  bevy_rust_arcade.rs  fake_arcade.rs  main.rs  particles.rs  progress.rs  simon_progress.rs  simon_reset.rs
