[package]
name = "simon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy-inspector-egui = "0.11.0"
rand = "0.8.5"
serde = {version = "1.0.39", features = ["derive"]}
serde_json = "1.0.82"
rust_arcade = { path = "../rust_arcade" }
rust_arcade_display = { path = "../rust_arcade_display" }
particles = { path = "../particles" }
progress = { path = "../progress" }